manifests/dev/ingress-class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: climatedao
spec:
  controller: k8s.io/ingress-nginx
