manifests/dev/default-service.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: climatedao
  labels:
    app: default-http-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: climate-dao-ui
