manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: climate-dao-ui
  namespace: climatedao
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
          more_clear_headers "Server";
spec:
  defaultBackend:
    service:
      name: climate-dao-ui
      port:
        number: 80
  tls:
    - hosts:
        - climatedao.uksouth.cloudapp.azure.com
      secretName: tls-secret
  rules:
  - host: climatedao.uksouth.cloudapp.azure.com
    http:
      paths: 
      - path: /sapi/
        pathType: Prefix
        backend:
          service:
            name: climate-dao-api
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: climate-dao-ui
            port: 
              number: 80
  ingressClassName: nginx
